plugins {
	id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'war'
}

group = 'com.softline'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'com.github.javafaker:javafaker:1.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation group: 'com.auth0', name: 'java-jwt', version: '3.11.0'
	implementation group: 'org.javatuples', name: 'javatuples', version: '1.2'
	implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '1.1.1'

	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.1.Final'
	implementation 'org.hibernate:hibernate-jpamodelgen:5.4.25.Final'
	implementation 'org.hibernate:hibernate-jpamodelgen:5.4.25.Final'
    implementation("com.graphql-java-kickstart:graphql-spring-boot-starter:5.10.0")
	implementation("com.graphql-java-kickstart:playground-spring-boot-starter:5.10.0")
    implementation 'org.modelmapper:modelmapper:2.4.4'
    compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.0.Final'
	annotationProcessor 'org.hibernate:hibernate-jpamodelgen'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

}

test {
	useJUnitPlatform()
}
